--- a/themes/casual/views/article/index.twig
+++ b/themes/casual/views/article/index.twig
@@ -25,7 +25,5 @@
                 'itemView': '_index.twig'
                 }) | raw }}
                 
-            </div>
-        </div>
-    </div>
-</div>
+            </div> <!-- box-->
+        </div> {# row  #}
