--- a/themes/casual/views/article/_index.twig
+++ b/themes/casual/views/article/_index.twig
@@ -1,3 +1,5 @@
+{{ set(this, 'title', t(app.name) ~' '~ model.title ) }}
+
 <div class="col-lg-12 text-center">
 
     <img class="img-responsive img-border img-full" src="{{ this.theme.getUrl('img/slide-1.jpg') }}" alt="">
