--- a/themes/casual/views/layouts/main.twig
+++ b/themes/casual/views/layouts/main.twig
@@ -1,24 +1,103 @@
-{{ register_asset_bundle('frontend/assets/AppAsset') }}  {# asset root for yii advanced template #}
-    {{   void(this.beginPage()) }}
+{% set assetDir = register_asset_bundle('frontend/assets/AppAsset') %}  {# asset root for yii advanced template #}
+{{   void(this.beginPage()) }}
 <!DOCTYPE html>
 <html lang="{{ app.language }}">
 <head>
     <meta charset="{{ app.charset }}">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=2">
+    {{ html('CsrfMetaTags') | raw }}
     <title>{{ this.title }}</title>
-    {{ html.csrfMetaTags | raw }}
-    {{   void(this.head) }}
+    {{ void(this.head) }}
 </head>
 <body>
 {{   void(this.beginBody()) }}
-<section id="header">
-    {# header content #}
-</section>
-{{ content | raw}}
-<footer class="footer">
-    <div class="container">
-        {# footer content #}
+<div class="top">
+    <div class="brand">
+            <img src="{{ app.view.theme.baseUrl }}/img/redhand.svg"> <span>Dovie' andi se tovya sagain</span>
     </div>
+    <div class="address-bar">{{ t('Programming') }} | {{ t('World Today') }} | {{ t('Fun') }} | {{ t('Personal') }}</div>
+</div>
+
+    {{ nav_bar_begin({
+        'brandLabel': '<div class="dovieBrand">
+            <img  src="' ~ app.view.theme.baseUrl ~ '/img/redhand.svg"><span> Dovie\' andi se tovya sagain</span>
+            </div>',
+        'brandUrl': app.homeUrl,
+        'brandOptions': {'style': 'display: block;'},
+        'options': { 'class': 'navbar-default' },
+        'renderInnerContainer': true,
+    }) }}
+
+    <!-- everyone can see Home page -->
+    {% set menuItems = [{'label': t('Home'), 'url': ['/site/index']}] %}
+
+    <!-- we do not need to display Article/index, About and Contact pages to editor+ roles -->
+    {% if not app.user.can('editor') %}
+        {% set menuItems = menuItems|merge([{ 'label': t('Articles'), 'url': ['/article/index'] }]) %}
+        {% set menuItems = menuItems|merge([{ 'label': t('About'), 'url': ['/site/about'] }]) %}
+        {% set menuItems = menuItems|merge([{ 'label': t('Contact'), 'url': ['/site/contact'] }]) %}
+    {% elseif app.user.can('editor') %}
+        {% set menuItems = menuItems|merge([{ 'label': t('Articles'), 'url': ['/article/admin'] }]) %}
+    {% endif %}
+
+    {% if app.user.isGuest == false %}
+        {% set menuItems = menuItems|merge([
+            {'label': 'Main', 'url': ['/site/index']},
+            {'label': 'About', 'url': ['/site/about']},
+            {
+                'label': t('logout') ~ '(' ~ app.user.identity.username ~ ')',
+                'url': ['/site/logout'],
+                'linkOptions': {'data-method': 'post'}
+            }
+        ])
+    %}
+    {% else %}
+        {% set menuItems = menuItems|merge([
+            {'label': t('Login'), 'url': ['/site/login']},
+        ])
+    %}
+
+    {% endif %}
+    {{ nav_widget({
+        'options': { 'class': 'navbar-nav navbar' },
+        'items': menuItems
+    }) | raw }}
+
+    {{ nav_bar_end() }}
+
+<div class="container" >
+    <div class="row">
+
+        <div class="col-lg-8 col-md-8">
+            {{ content | raw }}
+        </div>
+        <!-- right column -->
+        <aside class="col-lg-3 col-md-3 well col-lg-push-1 col-md-push-1" style="padding: 0; padding-top: 0px;">
+            <div id="selectLang">{{ LanguageSelector({'options': {'style': 'min-width:35px;'}}) | raw }}</div>
+            <form class="form-inline col-lg-12" role="search" style="padding: 0; border: 2px red solid;">
+                <input  style="border: 2px green solid" type="text" class=" col-lg-8 form-control" id="exampleInputName2" placeholder="{{ t('Search term') }}">
+                <button type="submit" class="btn btn-default" style="border: 2px red solid;">
+                    <span class="glyphicon glyphicon-search"></span>
+                </button>
+            </form>
+        </aside>
+
+    </div>
+</div>
+
+<footer class="footer">
+
+    <div class="container">
+
+        <div class="row">
+            <div class="col-lg-22 text-center">
+
+                <p>Copyright &copy; {{ t(app.name) }} {{  'now'|date('Y') }} {{ Yii.powered() | raw }}</p>
+            </div>
+        </div>
+
+    </div>
+
 </footer>
 {{   void(this.endBody()) }}
 </body>
