--- a/themes/casual/views/site/contact.twig
+++ b/themes/casual/views/site/contact.twig
@@ -1,3 +1,5 @@
+{{ set(this, 'title', t(app.name) ~' '~ t('Contact')) }}
+
 <div class="row">
     <div class="box">
         <div class="col-lg-12">
@@ -9,18 +11,19 @@
         </div>
         <div class="col-md-8">
             <!-- Embedded Google Map using an iframe - to select your location find it on Google maps and paste the link as the iframe src. If you want to use the Google Maps API instead then have at it! -->
-            <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+            <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                    src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
         </div>
         <div class="col-md-4">
-            <p>Phone:
-                <strong>123.456.7890</strong>
+            <p>{{ t('Phone') | raw }}:
+                <strong>+46736995406</strong>
             </p>
-            <p>Email:
-                <strong><a href="mailto:name@example.com">name@example.com</a></strong>
+            <p>{{ t('Email') | raw }}:
+                <strong><a href="mailto:{{ param('adminEmail') }}">{{ param('adminEmail') }}</a></strong>
             </p>
             <p>Address:
-                <strong>3481 Melrose Place
-                    <br>Beverly Hills, CA 90210</strong>
+                <strong>{{ param('adminStreet') }}
+                    <br>{{ param('adminCity') }}, {{ param('adminCountry') }}, {{ param('adminZip') }}</strong>
             </p>
         </div>
         <div class="clearfix"></div>
@@ -37,8 +40,6 @@
             <p class="col-lg-12">{{ t('If you have business inquiries or other questions,
                 please fill out the following form to contact us. Thank you.')| raw }}</p>
 
-
-
         {{ form.field(model, 'username') | raw }}
             {{ form.field(model, 'password').passwordInput() | raw }}
 
@@ -47,7 +48,7 @@
                 'id' : 'contact-form',
                 'options' : {'class' : ''},
             }) %}
-            {{ form.field(model, 'name', {'options': {'class': 'col-lg-4'}}).textInput() | raw }}
+            {{ form.field(model, 'name', {'options': {'class': 'col-lg-4'}}) | raw }}
             {{ form.field(model, 'email', {'options': {'class': 'col-lg-4'}}) | raw }}
             {{ form.field(model, 'subject', {'options': {'class': 'col-lg-4'}}) | raw }}
             {{ form.field(model, 'body', {'options': {'class': 'col-lg-12'}}).textArea({'rows': 6}) | raw }}
@@ -56,7 +57,7 @@
             }) | raw }}
 
             <div class="form-group col-lg-6">
-                {{ HtmlSubmitButton(t('Submit'), {'class': 'btn btn-primary', 'name': 'contact-button'})| raw }}
+                {{ html('SubmitButton',[t('Submit'), {'class': 'btn btn-primary', 'name': 'contact-button'}]) | raw }}
             </div>
 
             {{ active_form_end() }}
