--- a/themes/casual/views/article/_index.twig
+++ b/themes/casual/views/article/_index.twig
@@ -1,19 +1,16 @@
 {{ set(this, 'title', t(app.name) ~' '~ model.title ) }}
 
-<div class="col-lg-12 text-center">
-
+<div class="box col-lg-12 text-center">
+    <h2 class="intro-text text-center">{{ model.title }} </h2>
+    <hr>
     <img class="img-responsive img-border img-full" src="{{ this.theme.getUrl('img/slide-1.jpg') }}" alt="">
 
-    <h2>{{ model.title }}</a>
         <p class="time">
             <span class="glyphicon glyphicon-time"></span>
-            <small>{{ model.created_at|date('F j, Y, g:i a') }} </small>
+            <small>{{ model.created_at|date('F j, Y ') }} </small>
         </p>
-    </h2>
-    <a href="view?id={{ model.id }}" class="btn btn-default btn-lg">{{ t('Read more') }}</a>
 
     <p>{{ model.summary }}</p>
-
-    <hr>
+    <a href="view?id={{ model.id }}" class="btn btn-default btn-lg">{{ t('Read more') }}</a>
 
 </div>
