--- a/themes/casual/views/article/index.twig
+++ b/themes/casual/views/article/index.twig
@@ -7,23 +7,23 @@
 #}
 
 {{ set(this, 'title', t(app.name) ~' '~ t('News')) }}
-        <div class="row">
+<div class="container">
+    <div class="row">
 
-            <div class="box">
 
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Company <strong>blog</strong> </h2>
-                    <hr>
-                </div>
+           {# <div class="col-lg-12">
+                <hr>
+                <h2 class="intro-text text-center">Company <strong>blog</strong> </h2>
+                <hr>
+            </div>#}
 
-                {{ ListViewWidget({
-                'summary': false,
-                'dataProvider':dataProvider,
-                'emptyText': t('We haven\'t created any articles yet.'),
-                'itemOptions': {'class': 'item'},
-                'itemView': '_index.twig'
-                }) | raw }}
-                
-            </div> <!-- box-->
-        </div> {# row  #}
+            {{ ListViewWidget({
+            'summary': false,
+            'dataProvider':dataProvider,
+            'emptyText': t('We haven\'t created any articles yet.'),
+            'itemOptions': {'class': 'item'},
+            'itemView': '_index.twig'
+            }) | raw }}
+
+    </div> {# row  #}
+</div>
