--- a/themes/casual/css/sidemenu.css
+++ b/themes/casual/css/sidemenu.css
@@ -12,11 +12,21 @@
     }
 }
 */
-#slide-out-search > a{
+#slide-out-search > a, #slide-out-login > a{
     margin-left: 3px;
 }
-#slide-out-language{
+#slide-out-search{
     margin-top:100px;
+    z-index: 999;
+    position: relative;
+}
+#slide-out-language{
+    margin-top:200px;
+    z-index: 999;
+    position: relative;
+}
+#slide-out-login{
+    margin-top:-30px;
     z-index: 999;
     position: relative;
 }
