--- a/themes/casual/views/article/admin.twig
+++ b/themes/casual/views/article/admin.twig
@@ -12,26 +12,37 @@
 <div class="articles-admin">
 
     <div class="container box">
-        <h1>
-
+        <hr>
+        <h1 class="intro-text text-center">
         {{ html('encode',[this.title])|raw }}
-
+        </h1>
+        <hr>
         <span class="pull-right">
             {{ html('a',[t('Create Article'), ['create'], {'class': 'btn btn-success'}]) |raw }}
         </span>
 
-        </h1>
 
         {{ GridViewWidget({
             'dataProvider': dataProvider,
             'filterModel': searchModel,
             'summary': false,
             'columns': [
-                {'class': 'yii\\grid\\SerialColumn'},
-                {'attribute': 'user_id', 'value': 'author'},
-                'title',
-                {'attribute': 'status', 'filter': searchModel.getStatusList(),'value': '_status'},
-                {'attribute': 'category', 'filter': searchModel.getCategoryList(),'value': '_category'},
+                {'attribute': 'user_id', 'value': 'author', 'headerOptions': {'style': 'width:10%'}},
+                {
+                    'attribute': 'title',
+                    'headerOptions': {'style': 'width:20%'}
+                },
+                {
+                    'attribute': 'status',
+                    'filter': searchModel.getStatusList(),
+                    'value': '_status',
+                    'headerOptions': {'style': 'width:10%'}},
+                {
+                    'attribute': 'category',
+                    'filter': searchModel.getCategoryList(),
+                    'value': '_category',
+                    'headerOptions': {'style': 'width:10%'}
+                },
                 {'class': 'yii\\grid\\ActionColumn', 'header': t('Menu')},
             ],
         }) |raw }}
