--- a/themes/casual/views/article/index.twig
+++ b/themes/casual/views/article/index.twig
@@ -7,22 +7,17 @@
 #}
 
 {{ set(this, 'title', t(app.name) ~' '~ t('News')) }}
+{{ set(this, 'params', {'breadcrumbs': [t('Articles')]}) }}
+
 <div class="container">
     <div class="row">
 
-
-           {# <div class="col-lg-12">
-                <hr>
-                <h2 class="intro-text text-center">Company <strong>blog</strong> </h2>
-                <hr>
-            </div>#}
-
             {{ ListViewWidget({
-            'summary': false,
-            'dataProvider':dataProvider,
-            'emptyText': t('We haven\'t created any articles yet.'),
-            'itemOptions': {'class': 'item'},
-            'itemView': '_index.twig'
+                'summary': false,
+                'dataProvider':dataProvider,
+                'emptyText': t('We haven\'t created any articles yet.'),
+                'itemOptions': {'class': 'item'},
+                'itemView': '_index.twig'
             }) | raw }}
 
     </div> {# row  #}
