--- a/themes/casual/views/layouts/main.twig
+++ b/themes/casual/views/layouts/main.twig
@@ -1,4 +1,5 @@
 {% set assetDir = register_asset_bundle('frontend/assets/AppAsset') %}  {# asset root for yii advanced template #}
+{{ use('LoginForm') }}
 {{   void(this.beginPage()) }}
 <!DOCTYPE html>
 <html lang="{{ app.language }}">
@@ -64,74 +65,22 @@
     }) | raw }}
 
     {{ nav_bar_end() }}
-
 <div class="container-fluid" >
-
-    <div class="row">
+    <div id="breadcrumbs" class="row">
+        {{ Breadcrumbs({ 'links': this.params['breadcrumbs'] }) | raw }}
+    </div>
+<!-- MAIN CONTENT -->
+    <div  class="indexWrap">
         {{ content | raw }}
-        <!-- right column -->
-        {#<aside class="col-lg-3 col-md-3 col-lg-push-1 col-md-push-1">#}
-        <div id="slide-out-search" >
-            <a class="handle btn btn-lg" href="#" role="button" >
-                Search <span class="glyphicon glyphicon-search"></span>
-            </a>
-            <div class="sidebox shadow6" style="padding: 15px 5px;">
-                <form class="form-inline" role="search">
-                    <input type="text" class="form-control" id="exampleInputName2" placeholder="{{ t('Search term') }}">
-                    <button type="submit" class="btn btn-default" style="">
-                        <span class="glyphicon glyphicon-search"></span>
-                    </button>
-                </form>
-            </div>
-        </div>
-
-        <div id="slide-out-language"  style="">
-            {% set language = 'se' %}
-            {% if app.language == 'en' %}
-                {% set language = 'us' %}
-            {% endif %}
-            <a class="handle btn btn-lg" href="#" role="button">
-                Language <span class="flag-icon flag-icon-{{ language }}"></span>
-            </a>
-            <div class="sidebox shadow6" style="padding: 15px 5px;">
-                <div class="btn-group-vertical" role="group" aria-label="...">
-                    <a href="/en/site/index" class="btn btn-default "><span class="flag-icon flag-icon-us flag"></span></a>
-                    <a href="/se/site/index" class="btn btn-default "><span class="flag-icon flag-icon-se flag"></span></a>
-                </div>
-            </div>
-
-            {#{{ LanguageSelector({'options': {'class': 'list-inline', 'style': 'padding: 2px 0;'}}) | raw }}#}
-        </div>
-
-            {#<div class="sidebox shadowbox shadow6">
-                <h4 class=" text-center">Search</h4>
-                <form class="form-inline " role="search" style="padding: 0 0 30px 0;">
-                    <input type="text" class="col-lg-8 form-control" id="exampleInputName2" placeholder="{{ t('Search term') }}">
-                    <button type="submit" class="btn btn-default" style="">
-                        <span class="glyphicon glyphicon-search"></span>
-                    </button>
-                </form>
-            </div>#}
-
-        {#</aside>#}
+    </div>
+<!-- right side slide out panels-->
+    {% include 'side.twig' %}
 
     </div>
 </div>
+<!-- FOOTER -->
+    {% include 'footer.twig' %}
 
-<footer class="footer">
-
-    <div class="container">
-
-        <div class="row">
-            <div class="col-lg-22 text-center">
-
-                <p>Copyright &copy; {{ t(app.name) }} {{  'now'|date('Y') }} {{ Yii.powered() | raw }}</p>
-            </div>
-        </div>
-
-    </div>
-
-</footer>
 {{   void(this.endBody()) }}
 </body>
 </html>
