--- a/themes/casual/views/article/index.twig
+++ b/themes/casual/views/article/index.twig
@@ -7,18 +7,23 @@
 #}
 
 {{ set(this, 'title', t(app.name) ~' '~ t('News')) }}
-{{ set(this, 'params', {'breadcrumbs': [t('Articles')]}) }}
+{#{{ set(this, 'params', {'breadcrumbs': [t('Articles')]}) }}#}
 
-<div class="container">
-    <div class="row">
+<div class="col-xs-12 col-xs-push-2 col-sm-push-4 col-lg-push-0 categories-nav">
+    <ul class="nav nav-pills ">
+        {% for li in ArticleCategoryListItems(null,'li',{'role': 'presentation'},{'style': 'color: rgb(165,0,0)'}) %}
+            {{ li | raw }}
+        {% endfor %}
+    </ul>
+</div>
+<div class="col-xs-12" style="">
 
-            {{ ListViewWidget({
+    {{ ListViewWidget({
                 'summary': false,
                 'dataProvider':dataProvider,
-                'emptyText': t('We haven\'t created any articles yet.'),
+                'emptyText': html('tag',['div',t('We haven\'t created any articles yet.'),{'class': 'box'}]),
                 'itemOptions': {'class': 'item'},
                 'itemView': '_index.twig'
             }) | raw }}
 
-    </div> {# row  #}
 </div>
