--- a/themes/casual/views/site/login.twig
+++ b/themes/casual/views/site/login.twig
@@ -42,7 +42,7 @@
         </div>
 
          {{ active_form_end() }}
-        Not a member? <a href="/site/signup">Sign up</a>
+        Not a member? <a href="/signup">Sign up</a>
     </div> <!-- //wrapper div with col-4's -->
 
 </div>
