--- a/themes/casual/css/site.css
+++ b/themes/casual/css/site.css
@@ -195,6 +195,9 @@ footer p { margin: 0; padding: 50px 0;}
     background: #fff;
     background: rgba(255,255,255,0.9);
 }
+.categories-nav>ul{
+    margin-left: 15px;
+}
 .categories-nav>ul>li{
     background: #fff;
     background: rgba(255,255,255,0.5);
