--- a/themes/casual/views/layouts/side.twig
+++ b/themes/casual/views/layouts/side.twig
@@ -1,8 +1,9 @@
+<div id="slide-out-wrapper">
 {% if app.user.isGuest %}
 <!-- SLIDE OUT LOGIN/SIGNUP -->
     <div id="slide-out-login" >
-        <a id="slide-out-login-handler" class="btn btn-lg" href="#" role="button" >
-            Login/Signup
+        <a id="slide-out-login-handler" class="btn btn-default" href="#" role="button" >
+            <span class="glyphicon glyphicon-user"></span>
         </a>
         <div class="sidebox shadow6" style="width:400px;padding: 0px 5px;">
             {{ this.render('/site/login.twig',{'model': loginForm, 'inMainLayout':true}) | raw }}
@@ -12,8 +13,8 @@
 
 <!-- SLIDE OUT SEARCH BOX -->
     <div id="slide-out-search" >
-        <a id="slide-out-search-handler" class="btn btn-lg" href="#" role="button" >
-            Search <span class="glyphicon glyphicon-search"></span>
+        <a id="slide-out-search-handler" class="btn btn-default" href="#" role="button" >
+           <span class="glyphicon glyphicon-search"></span>
         </a>
         <div class="sidebox shadow6" style="padding: 15px 5px;">
             <form class="form" role="search">
@@ -33,8 +34,8 @@
         {% if app.language == 'en' %}
             {% set language = 'us' %}
         {% endif %}
-        <a id="slide-out-language-handler" class="btn btn-lg" href="#" role="button">
-            Language <span class="flag-icon flag-icon-{{ language }}"></span>
+        <a id="slide-out-language-handler" class="btn btn-default" href="#" role="button">
+             <span class="flag-icon flag-icon-{{ language }}"></span>
         </a>
         <div class="sidebox shadow6" style="padding: 15px 5px;">
             <div class="btn-group-vertical" role="group" aria-label="...">
@@ -45,3 +46,4 @@
 
         {#{{ LanguageSelector({'options': {'class': 'list-inline', 'style': 'padding: 2px 0;'}}) | raw }}#}
     </div>
+</div>
